--- a/themes/hargo/layouts/partials/head.html
+++ b/themes/hargo/layouts/partials/head.html
@@ -22,9 +22,9 @@
   <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ "icon.png" | absURL }} " type="image/x-icon">
-  <link rel="icon" href="{{ "icon.png" | absURL }} " type="image/x-icon">
-  <link rel="apple-touch-icon" href="{{ "icon.png" | absURL }}">
+  <link rel="shortcut icon" href="{{ "favicon.png" | absURL }} " type="image/x-icon">
+  <link rel="icon" href="{{ "favicon.png" | absURL }} " type="image/x-icon">
+  <link rel="apple-touch-icon" href="{{ "favicon.png" | absURL }}">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
