--- a/themes/hargo/layouts/_default/single.html
+++ b/themes/hargo/layouts/_default/single.html
@@ -32,6 +32,7 @@
           <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Your Name">
           <input type="text" class="form-control mb-2" id="phone" name="phone" placeholder="Your Phone">                    
           <input type="email" class="form-control mb-2" id="email" name="email" placeholder="Your Email">
+          <input type="text" class="form-control mb-2" id="fb" name="fb" placeholder="Your Facebook URL">          
           <textarea name="message" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
           <input name="address" id="source" type="hidden" value="{{ .Permalink }}">   
           <button type="submit" value="send" class="btn btn-block btn-outline-primary rounded">Send Now</button>
