--- a/themes/hargo/layouts/partials/head.html
+++ b/themes/hargo/layouts/partials/head.html
@@ -28,13 +28,13 @@
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.googleAnalitycsID }}"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T50Z5LV32L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '{{ .Site.Params.googleAnalitycsID }}');
+    gtag('config', 'G-T50Z5LV32L');
   </script>
 
 </head>
