--- a/themes/hargo/assets/scss/templates/_homepage.scss
+++ b/themes/hargo/assets/scss/templates/_homepage.scss
@@ -322,7 +322,7 @@
 
 .product-slider {
   .slick-list{
-    border: 1px solid $primary-color;
+    // border: 1px solid $primary-color;
     margin-bottom: 10px;
     border-radius: 5px;
   }
@@ -333,7 +333,7 @@
 
     li {
       list-style-type: none;
-      border: 1px solid $primary-color;
+      // border: 1px solid $primary-color;
       margin: 10px;
       border-radius: 5px;
       padding: 10px;
