--- a/themes/hargo/layouts/_default/single.html
+++ b/themes/hargo/layouts/_default/single.html
@@ -29,13 +29,13 @@
 
         <h3 class="mb-4">{{ .Params.Cta }}</h3>
         <!-- <form action="{{ .Site.Params.contact.formAction }}" method="POST"> -->
-        <form method="post" action="https://isaiah.pantrypoints.com/api/email">          
-          <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Your Name">
-          <input type="text" class="form-control mb-2" id="phone" name="phone" placeholder="Your Phone">                    
-          <input type="email" class="form-control mb-2" id="email" name="email" placeholder="Your Email">
-          <input type="text" class="form-control mb-2" id="fb" name="fb" placeholder="Your Facebook URL">          
-          <textarea name="message" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
-          <input name="address" id="source" type="hidden" value="{{ .Permalink }}">   
+        <form method="post" action="https://isaiah.pantrypoints.com/api/email">         
+          <input name="email[name]" type="text" class="form-control mb-2" id="name" placeholder="Your Name">
+          <input name="email[phone]" type="text" class="form-control mb-2" id="phone" placeholder="Your Phone">                    
+          <input name="email[email]" type="email" class="form-control mb-2" id="email" placeholder="Your Email">
+          <input name="email[country]" type="text" class="form-control mb-2" id="fb" placeholder="Your Facebook URL">          
+          <textarea name="email[content]" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
+          <input name="email[address]" id="source" type="hidden" value="{{ .Permalink }}">   
           <button type="submit" value="send" class="btn btn-block btn-outline-primary rounded">Send Now</button>
         </form>       
 
