--- a/themes/hargo/layouts/contact/list.html
+++ b/themes/hargo/layouts/contact/list.html
@@ -5,18 +5,14 @@
 
 <section class="section pt-0">
   <div class="container">
-    <form action="{{ .Site.Params.contact.formAction }}" method="POST">
-<!--       <input type="text" class="form-control mb-2" id="name" name="email[name]" placeholder="Your Name">
-      <input type="email" class="form-control mb-2" id="email" name="email[email]" placeholder="Your Email">
+    <form method="post" action="https://isaiah.pantrypoints.com/api/email">         
+      <input name="email[name]" type="text" class="form-control mb-2" id="name" placeholder="Your Name">
+      <input name="email[phone]" type="text" class="form-control mb-2" id="phone" placeholder="Your Phone">                    
+      <input name="email[email]" type="email" class="form-control mb-2" id="email" placeholder="Your Email">
       <textarea name="email[content]" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
-      <input name="email[address]" id="source" type="hidden" value="{{ .Permalink }}">             -->
-      <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Your Name">
-      <input type="email" class="form-control mb-2" id="email" name="email" placeholder="Your Email">
-      <textarea name="message" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
-      <input type="hidden" id="source" name="address" value="{{ .Permalink }}">                  
+      <input name="email[address]" id="source" type="hidden" value="{{ .Permalink }}">   
       <button type="submit" value="send" class="btn btn-block btn-outline-primary rounded">Send Now</button>
-    </form>
-
+    </form>       
 
     <div class="p-4 content">
       {{ .Content }}
