--- a/themes/hargo/assets/scss/style.scss
+++ b/themes/hargo/assets/scss/style.scss
@@ -26,7 +26,7 @@ body {
   // #dbffc7ff
   // #cdf7fd
   // effeffff
-  background-color: azure !important; 
+  background-color: white !important; 
 
 }
 
