--- a/themes/hargo/layouts/partials/footer.html
+++ b/themes/hargo/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="section pb-0" style="background-color: lightblue; color: steelblue;">
+<footer class="pt-5 border" >
   <div class="container">
     <div class="row border-bottom pb-5 justify-content-between">
       <div class="col-lg-5 col-sm-12">
