--- a/themes/hargo/layouts/partials/header.html
+++ b/themes/hargo/layouts/partials/header.html
@@ -1,7 +1,7 @@
 {{ "<!-- navigation -->" | safeHTML }}
 
 <!-- #a61c00ff -->
-<header class="sticky-top navigation" style="background-color: lightblue;">
+<header class="sticky-top navigation">
   <div class="container">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
