--- a/themes/hargo/assets/scss/templates/_navigation.scss
+++ b/themes/hargo/assets/scss/templates/_navigation.scss
@@ -1,11 +1,11 @@
 .navigation {
   transition: .3s ease;
-  background: $white;
+  background: #fff;
   @include desktop {
     border-bottom: 1px solid $border-color;
-    .navbar{
-      padding: 10px 0;
-    }
+    // .navbar{
+    //   padding: 10px 0;
+    // }
   }
 }
 
@@ -13,7 +13,7 @@
   border-bottom: 1px solid $border-color;
 
   .navbar {
-    padding: 10px 0;
+    padding: 1px 0;
   }
 }
 
@@ -93,74 +93,74 @@
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 20px;
+  padding: 14px;
 }
 
 
 /* search */
-.search-btn {
-  border: 0;
-  background: transparent;
-  color: $white;
-}
+// .search-btn {
+//   border: 0;
+//   background: transparent;
+//   color: $white;
+// }
 
-.search-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  z-index: 2;
-  visibility: hidden;
-  transition: .2s ease;
-  opacity: 0;
+// .search-wrapper {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   height: 100%;
+//   z-index: 2;
+//   visibility: hidden;
+//   transition: .2s ease;
+//   opacity: 0;
 
-  &.open {
-    visibility: visible;
-    opacity: 1;
-  }
-}
+//   &.open {
+//     visibility: visible;
+//     opacity: 1;
+//   }
+// }
 
-.search-box {
-  height: 100%;
-  width: 100%;
-  border: 0;
-  background: $white;
-  font-size: 20px;
-  padding: 0;
+// .search-box {
+//   height: 100%;
+//   width: 100%;
+//   border: 0;
+//   background: $white;
+//   font-size: 20px;
+//   padding: 0;
 
-  &:focus {
-    box-shadow: none !important;
-  }
-}
+//   &:focus {
+//     box-shadow: none !important;
+//   }
+// }
 
-.search-close {
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-  border: 0;
-  background: transparent;
-  page-break-after: 10px;
-  font-size: 20px;
-}
+// .search-close {
+//   position: absolute;
+//   right: 5px;
+//   top: 50%;
+//   transform: translateY(-50%);
+//   border: 0;
+//   background: transparent;
+//   page-break-after: 10px;
+//   font-size: 20px;
+// }
 
 /* cart */
-.cart {
-  background: transparent;
-  border: 0;
-  position: relative;
+// .cart {
+//   background: transparent;
+//   border: 0;
+//   position: relative;
 
-  @include desktop {
-    position: absolute;
-    top: 23px;
-    right: 50px;
-  }
+//   @include desktop {
+//     position: absolute;
+//     top: 23px;
+//     right: 50px;
+//   }
 
-  .badge {
-    position: absolute;
-    top: -5px;
-    border-radius: 50%;
-    right: -10px;
-  }
-}
+//   .badge {
+//     position: absolute;
+//     top: -5px;
+//     border-radius: 50%;
+//     right: -10px;
+//   }
+// }
