--- a/themes/hargo/layouts/_default/list.html
+++ b/themes/hargo/layouts/_default/list.html
@@ -14,13 +14,12 @@
             {{ end }}
           </a>
           <div class="card-body">
-            <a href="{{ .Permalink }}" class="h4">{{ .Title }}</a>
+            {{ .Title }}
             <p>{{ .Params.Description }}</p>
             <div class="mb-4">
               <span class="lead text-primary">{{ .Params.Price }}</span>
               <s>{{ .Params.PriceBefore }}</s>
             </div>
-            <a href="{{ .Permalink }}" class="btn btn-sm btn-outline-primary">View</a>      
         </div>
       </div>
       {{ end }}
