--- a/themes/hargo/layouts/partials/head.html
+++ b/themes/hargo/layouts/partials/head.html
@@ -27,6 +27,15 @@
   <link rel="apple-touch-icon" href="{{ "favicon.png" | absURL }}">
 
 
+<meta property="og:title" content="{{ .Title }}" />
+<meta property="og:description" content="{{ .Description }}" />
+<meta property="og:type" content="Product" />
+
+
+{{ with .Params.image }}
+  <meta property="og:image" content="{{ . }}">
+{{ end -}}
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-T50Z5LV32L"></script>
   <script>
