--- a/themes/hargo/layouts/partials/cta.html
+++ b/themes/hargo/layouts/partials/cta.html
@@ -10,7 +10,7 @@
           {{ end }}
         </div>
         <div class="col-lg-4 col-md-5 position-relative">
-          <img class="cta-image rounded" src="{{ .image | absURL }}" alt="">
+          <img class="cta-image rounded shadow" src="{{ .image | absURL }}" alt="">
         </div>
       </div>
     </div>
