--- a/themes/hargo/layouts/partials/cta2.html
+++ b/themes/hargo/layouts/partials/cta2.html
@@ -11,7 +11,7 @@
         {{ end }}
       </div>
       <div class="col-lg-4 col-md-5 position-relative">
-        <img class="cta-image" src="{{ .image | absURL }}" alt="">
+        <img class="cta-image shadow" src="{{ .image | absURL }}" alt="">
       </div>
     </div>
   </div>
