--- a/themes/hargo/layouts/index.html
+++ b/themes/hargo/layouts/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="col-lg-5 mb-5">
-          <img src="{{ .image | absURL }}" class="img-fluid rounded" alt="Main Image">
+          <img src="{{ .image | absURL }}" class="img-fluid rounded shadow" alt="Main Image">
         </div>
       </div>
     </div>
